--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A comprehensive yoga studio management system built with MERN stack",
   "main": "backend/server.js",
   "scripts": {
-    "start": "cd backend && node server.js",
+    "start": "node backend/server.js",
     "dev": "cd backend && nodemon server.js",
     "build": "echo 'No build step needed for static files'",
     "heroku-postbuild": "echo 'Post-build complete'"
@@ -30,7 +30,11 @@
     "mongoose": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
